# neural-rs

./: .gitignore  Brian.ipynb  Cargo.toml  Neural.ipynb  README.md
benches/: bench_network.rs  bench_neural.rs  bench_neuron.rs  bench_synapse.rs  bench_trace.rs
examples/: compare.rs  profile.rs  rate.rs  spikes.rs  stdp.rs
examples/results/: profile.csv  profile_rate.csv  spikes.csv  spikes_rate.csv  stdp.csv  stdp_rate.csv
ffi/: .gitignore  Cargo.toml
ffi/src/: lib.rs
src/: builder.rs  fastexp.rs  identifier.rs  lib.rs  network.rs  neural.rs  neuron.rs  spike.rs  synapse.rs  trace.rs
src/izhikevich/: config.rs  mod.rs  neuron.rs
src/stdp/: config.rs  mod.rs  synapse.rs
src/sym/: config.rs  mod.rs  synapse.rs
src/traces/: exp.rs  lin.rs  mod.rs
tests/: test_network.rs  test_neuron.rs  test_stdp.rs  test_sym.rs  test_synapse.rs  test_trace.rs
tests/results/: accomodation.csv  bistability.csv  class1.csv  class2.csv  default.csv  depolarizing_after_potential.csv  fast_spiking.csv  inhibition_induced_bursting.csv  inhibition_induced_spiking.csv  integrator.csv  mixed_mode.csv  phasic_bursting.csv  phasic_spiking.csv  phastic_bursting.csv  phastic_spiking.csv  rebound_burst.csv  rebound_spike.csv  resonator.csv  spike_frequency_adaptation.csv  spike_latency.csv  spikes.csv  spikes_rate.csv  stdp_ltd.csv  stdp_ltp.csv  stdp_rate.csv  subthreshold_oscillation.csv  sym_ltd.csv  sym_ltd_1.csv  sym_ltd_2.csv  sym_ltp.csv  sym_ltp_1.csv  sym_ltp_2.csv  threshold_variability.csv  tonic_bursting.csv  tonic_spiking.csv
