[package]

name = "neural"
version = "0.0.1"
authors = [ "jim@barkingmousestudio.com" ]

[dependencies]

rustc-serialize = "0.3.3"
wheel_timer = "0.2.2"
csv = "0.12.19"
rand = "0.1.4"

[lib]

name = "neural"

[profile.test]
opt-level = 0  # Controls the --opt-level the compiler builds with

[profile.bench]
opt-level = 3  # Controls the --opt-level the compiler builds with