[package]

name = "neural"
version = "0.0.1"
authors = [ "jim@barkingmousestudio.com" ]

[dependencies]
wheel_timer = "*"
rand = "*"
vec_map = "*"

[dev-dependencies]
csv = "*"

[lib]

name = "neural"

[profile.test]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
